<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\DB;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('document_types', function (Blueprint $table) {
            $table->id();
            $table->string('name')->unique();
            $table->boolean('is_active')->default(true);
            $table->timestamps();
        });

        // Стартовый набор — виды документов из ТЗ 4.1; дальше справочник ведётся из админ-панели
        DB::table('document_types')->insert(array_map(fn (string $name): array => [
            'name' => $name,
            'created_at' => now(),
            'updated_at' => now(),
        ], ['Руководство', 'Инструкция', 'Контракт', 'Сервисный акт', 'Паспорт оборудования']));
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('document_types');
    }
};
